# dm3-spec

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  README.rst  build.sh  build_docs.sh  fix_mermaid.sh  message-transport-protocol.md  messaging-specification.md  pyproject.toml
.github/workflows/: release.yml
blogs/: 2022.09.26.ens_forum.answer_xmtp.md
docs/: api-dotnet.md  conf.py  index.rst  make.bat  requirements.txt
docs/source/: api.rst  conf.py  index.rst
docs/source/specification/: message-transport-protocol.md
docs/specification/: message-transport-protocol.md  overview.md  references.md
docs/specification/billboard-message/: bmp-architecture.md  bmp-client.md  bmp-node.md  bmp-service-api.md  bmp-ui.md  bmp.md  bmp.rst
docs/specification/limited-scope-profiles/: lsp-overview.md  lsp-profiles.md  lsp-workflow.md  lsp.rst
docs/specification/limited-scope-profiles/flows/: 01-default-auth.md  02-dapp-auth.md
docs/specification/message-storage/: msp-datastructure.md  msp-storage.md  msp.rst
docs/specification/message-transport/: mtp-appendix.md  mtp-deliveryservice-api.md  mtp-registry.md  mtp-transport.md  mtp.rst
docs/specification/profile-link/: plp-linked.md  plp-overview.md  plp-profiles.md  plp.rst
docs/whitepaper/: Whitepaper_new.md  _whitepaper_old.md  whitepaper.md  whitepaper_v1.md
specification/: group-messaging-sepcification.md  message-transport-protocol.md
whitepaper/: whitepaper_v1.md
